[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martilo_diffusion2d"
version = "0.0.2"
authors = [{name = "Lucia Agullo Marti"}]
description = "A Python package for solving the 2D diffusion equation."
readme = "README.md"
requires-python = ">=3.6"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
keywords = ["diffusion", "2D", "numerical", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Repository = "https://github.com/lucia-agullo-marti/diffusion2d"

[tool.setuptools]
packages = ["martilo_diffusion2d"]
